add docs for remaining routes
