# backend/services/tripService/controller/stop_controller.go
@@ -24,6 +24,20 @@ func NewStopHandler(repo repository.StopRepo, validator *validator.Validate) *St
 	}
 }
 
+//	@Summary		Create a new stop
+//	@Tags			Stop
+//	@Description	This endpoint can be used to add a stop to an existing trip. Requirements: authenticated
+//	@ID				create-stop
+//	@Accept			json
+//	@Produce		json
+//	@Param			CreateStopInput	body		models.CreateStopInput	true	"User Input for creating a new stop"
+//	@Success		200				{object}	models.TripStop
+//	@Failure		400				{object}	jsonHelper.HTTPError	"In case of invalid CreateStop DTO"
+//	@Failure		401				{object}	jsonHelper.HTTPError	"In case of unauthenticated request"
+//	@Failure		404				{object}	jsonHelper.HTTPError	"In case of unknown trip id"
+//	@Failure		500				{object}	jsonHelper.HTTPError	"In case of persistence error"
+//	@Router			/stop [post]
+//	@Security		ApiKeyAuth
 func (h *StopHandler) CreateStop(w http.ResponseWriter, request *http.Request) {
 
 	// validate input
@@ -54,6 +68,20 @@ func (h *StopHandler) CreateStop(w http.ResponseWriter, request *http.Request) {
 	jsonHelper.HttpResponse(&stop, w)
 }
 
+//	@Summary		Create multiple stops
+//	@Tags			Stop
+//	@Description	This endpoint can be used to multiple stops to an existing trip. Requirements: authenticated
+//	@ID				create-stops
+//	@Accept			json
+//	@Produce		json
+//	@Param			CreateStopsInput	body		models.CreateStopsInput	true	"User Input for creating new stops"
+//	@Success		200					{array}		models.TripStop
+//	@Failure		400					{object}	jsonHelper.HTTPError	"In case of invalid CreateStops DTO"
+//	@Failure		401					{object}	jsonHelper.HTTPError	"In case of unauthenticated request"
+//	@Failure		404					{object}	jsonHelper.HTTPError	"In case of unknown trip id"
+//	@Failure		500					{object}	jsonHelper.HTTPError	"In case of persistence error"
+//	@Router			/stops [post]
+//	@Security		ApiKeyAuth
 func (h *StopHandler) CreateStops(w http.ResponseWriter, request *http.Request) {
 
 	// validate input
